buildscript {
    // skipAllure=true lets the build configure without resolving the allure plugin
    // (useful in network-restricted environments where plugins-artifacts.gradle.org is blocked)
    def skipAllure = gradle.startParameter.projectProperties.containsKey('skipAllure')
    repositories {
        mavenCentral()
        if (!skipAllure) {
            maven { url 'https://plugins.gradle.org/m2/' }
        }
    }
    dependencies {
        classpath 'org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.8'
        if (!skipAllure) {
            classpath 'io.qameta.allure.gradle.allure:allure-plugin:2.11.2'
        }
    }
}

plugins {
    id 'checkstyle'
    id 'java'
    id 'idea'
}

def skipAllure = project.hasProperty('skipAllure')

if (!skipAllure) {
    apply plugin: 'io.qameta.allure'
}

ext {
    archivesBaseName = 'autotests'
}

compileJava.options.fork = true
sourceCompatibility = JavaVersion.VERSION_21
targetCompatibility = JavaVersion.VERSION_21

idea {
    module {
        outputDir = file("${project.buildDir}/classes/java/main")
        testOutputDir = file("${project.buildDir}/classes/java/test")
    }
}

def allureVersion = "2.13.6"

if (!skipAllure) {
    allure {
        autoconfigure = true
        aspectjweaver = true
        version = allureVersion

        useTestNG {
            version = allureVersion
        }
    }
}

repositories {
    mavenCentral()
    mavenLocal()
}

dependencies {
    implementation(
            [group: 'com.sun.mail', name: 'javax.mail', version: '1.6.2'],
            [group: 'io.github.bonigarcia', name: 'webdrivermanager', version: '5.5.3'],
            [group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.24.3'],
            [group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.24.3'],
            [group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '4.8.0'],
            [group: 'org.seleniumhq.selenium', name: 'selenium-remote-driver', version: '4.8.0'],
            [group: 'org.testng', name: 'testng', version: '7.3.0'],
            [group: 'io.qameta.allure', name: 'allure-testng', version: '2.19.0']
    )
    // Jackson — JSON serialisation for AI provider request/response bodies
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.0'
    // Playwright Java — DOM and accessibility tree extraction for PageCrawler
    implementation 'com.microsoft.playwright:playwright:1.44.0'
    implementation 'org.jetbrains:annotations:24.0.1'
    compileOnly 'org.projectlombok:lombok:1.18.34'
    annotationProcessor 'org.projectlombok:lombok:1.18.34'

    testCompileOnly 'org.projectlombok:lombok:1.18.34'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.34'
    testImplementation 'org.mockito:mockito-core:5.14.2'
    testRuntimeOnly 'org.slf4j:slf4j-simple:2.0.16'
}

//=================================== Test =====================================

test {
    if (!skipAllure) {
        finalizedBy('allureReport')
    }
    ignoreFailures = false
    doFirst {
        delete(file("${buildDir}/allure-results"))
        delete(file("${buildDir}/reports/tests/testng"))
    }
    testLogging {
        showStandardStreams = true
        events "PASSED", "FAILED", "SKIPPED"
        exceptionFormat = 'full'
    }
    systemProperty 'org.slf4j.simpleLogger.logFile', 'System.out'
    systemProperty 'org.slf4j.simpleLogger.defaultLogLevel', 'info'
    systemProperty 'org.slf4j.simpleLogger.showDateTime', 'true'
    systemProperty 'org.slf4j.simpleLogger.dateTimeFormat', 'yyyy-MM-dd HH:mm:ss.SSS'
    systemProperty 'org.slf4j.simpleLogger.showThreadName', 'true'
    systemProperty 'org.slf4j.simpleLogger.showLogName', 'false'
    systemProperty 'testng.show.stack.frames', 'true'

    def base_url = System.properties.containsKey('base_url') ? System.getProperty('base_url') : ''
    systemProperty 'base_url', base_url

    def browser_version = System.properties.containsKey('browser_version') ? System.getProperty('browser_version') : 'latest'
    systemProperty 'browser_version', browser_version

    def build_number = System.properties.containsKey('build_number') ? System.getProperty('build_number') : new Date().format('MMddyyhhmmss')
    systemProperty 'build_number', build_number

    def driver = System.properties.containsKey('driver') ? System.getProperty('driver') : 'CHROME'
    systemProperty 'driver', driver

    def lambda_key = System.properties.containsKey('lambda_key') ? System.getProperty('lambda_key') : ''
    systemProperty 'remote_key', lambda_key
    systemProperty 'lambda_key', lambda_key

    def lambda_username = System.properties.containsKey('lambda_username') ? System.getProperty('lambda_username') : ''
    systemProperty 'remote_username', lambda_username
    systemProperty 'lambda_username', lambda_username

    def locale = System.properties.containsKey('locale') ? System.getProperty('locale') : 'en-US'
    systemProperty 'locale', locale

    def os = System.properties.containsKey('os') ? System.getProperty('os') : 'windows'
    systemProperty 'os', os

    def platform = System.properties.containsKey('platform') ? System.getProperty('platform') : 'Windows 10'
    systemProperty 'platform', platform

    def remote_browser = System.properties.containsKey('remote_browser') ? System.getProperty('remote_browser') : 'CHROME'
    systemProperty 'remote_browser', remote_browser

    def screen_maximize = System.properties.containsKey('screen_maximize') ? System.getProperty('screen_maximize') : true
    systemProperty 'screen_maximize', screen_maximize

    def screen_resolution = System.properties.containsKey('screen_resolution') ? System.getProperty('screen_resolution') : '1920,1080'
    systemProperty 'screen_resolution', screen_resolution

    def suite = System.properties.containsKey('suite') ? System.getProperty('suite') : 'ui,unit'
    systemProperty 'suite', suite

    def suiteGroups = suite.split(',')*.trim().findAll { it }
//testNG settings
    def exclude = System.properties.containsKey('exclude') ? System.getProperty('exclude') : 'disabled'
    def thread_count = System.properties.containsKey('thread_count') ? System.getProperty('thread_count') : 4

    useTestNG() {
        useDefaultListeners = true
        listeners << 'utils.logging.CustomArtifactsReporter'
        outputDirectory = file("$projectDir/build/reports/tests/testng")
        includeGroups suiteGroups as String[]
        excludeGroups exclude
        parallel 'methods'
        threadCount = thread_count as int
    }

    afterSuite { suiteDescription, suiteResult ->
        if (suiteDescription.parent == null) {
            if (suiteResult.testCount == 0) {
                throw new GradleException("No tests were executed for suite '${suite}'. Check suite filtering.")
            }

            int failed = suiteResult.failedTestCount + suiteResult.skippedTestCount
            if (failed > 0) {
                throw new GradleException("Tests did not pass: failed=${suiteResult.failedTestCount}, skipped=${suiteResult.skippedTestCount}, total=${suiteResult.testCount}")
            }
        }
    }
}

tasks.register('installPlaywrightBrowsers', JavaExec) {
    group = 'playwright'
    description = 'Downloads Playwright Chromium browser binaries'
    classpath = sourceSets.main.runtimeClasspath
    mainClass = 'com.microsoft.playwright.CLI'
    args = ['install', 'chromium']
}

if (!skipAllure) {
    tasks.named('allureReport') {
        doFirst {
            delete(file("${buildDir}/reports/allure-report/allureReport"))
        }
    }
}

gradle.buildFinished {
    def testNgEmailablePath = file("${buildDir}/reports/tests/testng/emailable-report.html").absolutePath.replace('\\', '/')
    def testNgPath = file("${buildDir}/reports/tests/testng/index.html").absolutePath.replace('\\', '/')
    def testNgArtifactsPath = file("${buildDir}/reports/tests/testng/custom-artifacts.html").absolutePath.replace('\\', '/')
    def testNgEmailable = "file:///${testNgEmailablePath}"
    def testNgIndex = "file:///${testNgPath}"
    def testNgArtifacts = "file:///${testNgArtifactsPath}"
    println ""
    println "TestNG emailable report: ${testNgEmailable}"
    println "TestNG report: ${testNgIndex}"
    println "TestNG artifacts report: ${testNgArtifacts}"
    if (!skipAllure) {
        def allurePath = file("${buildDir}/reports/allure-report/allureReport/index.html").absolutePath.replace('\\', '/')
        println "Allure report: file:///${allurePath}"
        println "If Allure opens blank from file:///, run: ./gradlew allureServe"
    }
}
